editoast: add views for timetable and train schedule v2
