# editoast/src/views/v2/mod.rs
@@ -1,0 +1,12 @@
+pub mod timetable;
+pub mod train_schedule;
+
+crate::routes! {
+            train_schedule::routes(),
+            timetable::routes(),
+}
+
+crate::schemas! {
+    train_schedule::schemas(),
+    timetable::schemas(),
+}
